tests/NormalTests/paczka1/fuzzy1/41968855.err
Error in line 1: PwCRQahJO S123 42,7
Error in line 4: vbe5cGB A957 33,1
Error in line 7: A,57 A531 2,6
Error in line 26: PwCRQahJO A652 47,59
Error in line 27: PwCRQahJO A652 30,2
Error in line 28: PwCRQahJO A957 8,8
Error in line 13: vbe5cGB S123 367,4
Error in line 35: 6YD A652 87,3
